force-app/main/default/objects/GDICOE_Job_Detail__c/GDICOE_Job_Detail__c.object-meta.xml
<CustomObject>
    <label>GDICOE Job Detail</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GDICOE Job Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>