force-app/main/default/objects/GDICOE_Job_Detail__c/fields/Advantages__c.field-meta.xml
<CustomField>
    <fullName>Advantages__c</fullName>
    <label>Advantages</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>