force-app/main/default/objects/GDICOE_Job_Detail__c/fields/Assets__c.field-meta.xml
<CustomField>
    <fullName>Assets__c</fullName>
    <label>Assets</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>