force-app/main/default/objects/GDICOE_Job_Detail__c/fields/Footer__c.field-meta.xml
<CustomField>
    <fullName>Footer__c</fullName>
    <label>Footer</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>