force-app/main/default/objects/GDICOE_Job_Detail__c/fields/GDICOE_Job_Posting__c.field-meta.xml
<CustomField>
    <fullName>GDICOE_Job_Posting__c</fullName>
    <label>GDICOE Job Posting</label>
    <referenceTo>GDICOE_Job_Posting__c</referenceTo>
    <relationshipLabel>GDICOE Job Details</relationshipLabel>
    <relationshipName>GDICOE_Job_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>