force-app/main/default/objects/GDICOE_Job_Detail__c/fields/Header__c.field-meta.xml
<CustomField>
    <fullName>Header__c</fullName>
    <label>Header</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>