force-app/main/default/objects/GDICOE_Job_Detail__c/fields/Keywords__c.field-meta.xml
<CustomField>
    <fullName>Keywords__c</fullName>
    <label>Keywords</label>
    <length>120</length>
    <type>Text</type>
</CustomField>