force-app/main/default/objects/GDICOE_Job_Detail__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <label>Profile</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>