force-app/main/default/objects/GDICOE_Job_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Language__c</columns>
    <columns>Location__c</columns>
    <columns>Description__c</columns>
    <columns>GDICOE_Job_Posting__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>